# AndroidMagic

./: README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/hzy/magic/app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hzy/magic/app/: MainActivity.java  MainApplication.java
app/src/main/java/com/hzy/magic/app/activity/: MainActivity.java  SplashActivity.java
app/src/main/java/com/hzy/magic/app/adapter/: FileItemAdapter.java  PathItemAdapter.java
app/src/main/java/com/hzy/magic/app/bean/: FileInfo.java
app/src/main/res/drawable/: ic_file_unknown.xml  ic_floder_empty.xml  ic_folder_full.xml  path_tag_back.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  path_list_item.xml  storage_list_item.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/hzy/magic/app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libmagic/: build.gradle
libmagic/src/androidTest/java/com/hzy/libmagic/: ExampleInstrumentedTest.java
libmagic/src/main/: AndroidManifest.xml
libmagic/src/main/cpp/: Android.mk  CMakeLists.txt  magicapi.c  ndkhelper.h
libmagic/src/main/cpp/file/: apprentice.c  config.h
libmagic/src/main/java/com/hzy/libmagic/: MagicApi.java
libmagic/src/main/jni/: magicapi.c  ndkhelper.h
libmagic/src/main/jni/file/: config.h  magic.h
libmagic/src/main/res/values/: strings.xml
libmagic/src/test/java/com/hzy/libmagic/: ExampleUnitTest.java
(+1 files in other folders)
